Consistently assert that input list only contains text inputs