@@ -12,7 +12,6 @@ package org.elasticsearch.inference;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * This class represents a String which may be raw text, or the String representation of some other data such as an image in base64
@@ -46,8 +45,19 @@ public record InferenceString(String value, DataType dataType) {
         return DataType.TEXT.equals(dataType);
     }
 
+    /**
+     * Converts a list of {@link InferenceString} to a list of {@link String}.
+     * This method should only be called in code paths that do not deal with multimodal inputs; where all inputs are guaranteed to be
+     * raw text, since it discards the {@link org.elasticsearch.inference.InferenceString.DataType} associated with each input.
+     *
+     * @param inferenceStrings The list of {@link InferenceString} to convert to a list of {@link String}
+     * @return a list of String inference inputs that do not contain any non-text inputs
+     */
     public static List<String> toStringList(List<InferenceString> inferenceStrings) {
-        return inferenceStrings.stream().map(InferenceString::value).collect(Collectors.toList());
+        return inferenceStrings.stream().map(i -> {
+            assert i.isText() : "Non-text input passed to InferenceString.toStringList";
+            return i.value();
+        }).toList();
     }
 
 }
